--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="sword">#EF3349</color>
     <color name="sbg">#F3F3F3</color>
     <color name="sbg2">#D3D3D3</color>
+    <color name="reward_text_color">#FE8D43</color>
+    <color name="reward_amount_color">#FF7C27</color>
 </resources>
