--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,12 @@
         <item name="android:background">@drawable/button_bg_3</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
+
+    <style name="button5">
+        <item name="android:fontFamily">@font/summery_notes_regular</item>
+        <item name="android:background">@drawable/button_bg_5</item>
+        <item name="android:textColor">#FFFF</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
 </resources>
